# lattice_net

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  setup.py  todo.txt
cmake/: FindDataLoaders.cmake  FindEasyPBR.cmake
config/: ln_eval_cloud_ros.cfg  ln_train_shapenet_example.cfg  lnn_check_lattice_size.cfg  lnn_compare_semantic_kitti.cfg  lnn_eval_scannet.cfg  lnn_eval_semantic_kitti.cfg  lnn_train_scannet.cfg  lnn_train_semantic_kitti.cfg  lnn_train_shapenet.cfg  lnn_train_shapenet_bak.cfg  test_loader.cfg
data/shapenet_part_seg/: download_shapenet.sh
data/shapenet_part_seg/colorscheme_and_labels/airplane/: labels.txt
data/shapenet_part_seg/colorscheme_and_labels/car/: color_scheme.txt  frequency_uniform.txt
data/shapenet_part_seg/colorscheme_and_labels/earphone/: labels.txt
data/shapenet_part_seg/colorscheme_and_labels/guitar/: frequency_uniform.txt
data/shapenet_part_seg/colorscheme_and_labels/knife/: color_scheme.txt
data/shapenet_part_seg/colorscheme_and_labels/laptop/: frequency_uniform.txt
data/shapenet_part_seg/colorscheme_and_labels/motorbike/: color_scheme.txt  frequency.txt  frequency_uniform.txt  labels.txt
data/shapenet_part_seg/colorscheme_and_labels/mug/: labels.txt
data/shapenet_part_seg/colorscheme_and_labels/table/: color_scheme.txt
docker/: Dockerfile  README.md  build.sh  cleanup.sh  echo_to_file.sh  lattice_env.yaml  run.sh  setup.sh
docker/data/: libeigen3-dev_3.3.7-3_all.deb  libeigen3-dev_3.4.0-2ubuntu2_all.deb  libgphoto2-6_2.5.22-3_amd64.deb  libgphoto2-dev_2.5.22-3_amd64.deb  libgphoto2-port12_2.5.22-3_amd64.deb
include/lattice_net/: EvalParams.h  HashCPU.h  HashTable.cuh  Lattice.cuh  Lattice.h  LatticeCPU_test.h  LatticeFuncs.cuh  LatticeGPU_test.h  ModelParams.h  PL_CPU.h  PermutohedralLatticeCPU_IMPL.h  TrainParams.h  Voxel.h  VoxelGrid.h
include/lattice_net/jitify_helper/: jitify_helper.cuh  jitify_options.hpp  jitify_options.hpp.in
include/lattice_net/kernels/: HashTableGPU.cuh  LatticeGPU.cuh  dummy_device_func.cuh  hello_kernel.cuh
latticenet_py/: ln_eval.py  ln_eval_cloud_ros.py  ln_train.py  lnn_eval.py  lnn_train.py
latticenet_py/callbacks/: phase.py  state_callback.py  tensorboard_callback.py  viewer_callback.py  visdom_callback.py
latticenet_py/lattice/: diceloss.py  lattice_funcs.py  lattice_modules.py  lattice_py.py  lattice_wrapper.py  lovasz_loss.py  models.py
latticenet_py/misc/: check_minkowksi_pred.py  lnn_check_lattice_size.py  lnn_grad_check.py
latticenet_py/utils/: utils.py
python/: lnn_eval.py  lnn_train.py  test_loader.py
python/callbacks/: phase.py  state_callback.py  viewer_callback.py  visdom_callback.py
python/lattice/: lattice_funcs.py  lattice_modules.py  lattice_py.py  models.py  models.py.orig
python/lnn/: adamw.py  compute_class_frequency.py  dice.py  diceloss.py  focalloss.py  gradcheck_custom.py  jaccard.py  lattice_funcs.py  lattice_modules.py  lattice_py.py  lattice_scale_finder.py  lnn_autograd_extention.py  lnn_compute_avg_points_in_dataset.py  lnn_eval.py  lnn_eval_single_mesh.py  lnn_make_teaser_img.py  lnn_train.py  lr_finder.py  model_ctx.py  models.py  onecyclelr.py  phase.py  poly_scheduler.py  scores.py  scores_callback.py  state_callback.py  viewer_callback.py  vis.py  visdom_callback.py
python/misc/: check_minkowksi_pred.py  lnn_check_lattice_size.py  lnn_compare_semantic_kitti.py  prepare_submission_semantickitti.py
src/: EvalParams.cxx  HashTable.cu  Lattice.cu  Lattice.cxx  LatticeCPU_test.cxx  LatticeFuncs.cu  LatticeGPU_test.cxx  ModelParams.cxx  PyBridge.cxx  TrainParams.cxx  Voxel.cxx  VoxelGrid.cxx
